css y unos formularios hechos

--- a/Views/Pagina3.html
+++ b/Views/Pagina3.html
@@ -5,54 +5,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alimentos S.A</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/estilos.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="./assets/css/bootstrap1.css">
-
-    <style>
-        .card {
-            background-image: url('https://tbm-media.s3.amazonaws.com/og_images/IMG_6209_crop_1200.jpg');
-            background-size: cover;
-            background-position: center;
-            color: white;
-            text-align: center;
-            height: 300px;
-        }
-
-        .card-body {
-            background-color: rgba(0, 0, 0, 0.5);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            height: 100%;
-        }
-
-        .card-1 {
-            background-image: url('https://tbm-media.s3.amazonaws.com/og_images/IMG_6209_crop_1200.jpg');
-        }
-
-        .card-2 {
-            background-image: url('https://www.gannett-cdn.com/-mm-/148256208c5eca0e0fa2a8da2eaceef67d721a11/c=0-165-2993-1856/local/-/media/2018/01/17/Pensacola/Pensacola/636518005126914564-Helping-the-Homeless-001.jpg?width=3200&height=1680&fit=crop');
-        }
-
-        .card-3 {
-            background-image: url('https://media.npr.org/assets/img/2012/07/05/homeless-in-philadelphia-e35ede4faf4c36354378c34d4d696cecc25fbbfa-s1100-c50.jpg');
-        }
-        .header {
-            background-color: #4372f5;
-            color: white;
-            text-align: center;
-            padding: 100px 0;
-        }
-        
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="./Assets/css/Pagina3.css" rel="stylesheet">
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Logo</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Voluntarios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Comercios afiliados</a>
+              </li>
+              <li class="nav-item">
+                <span>
+                  <a class="nav-button" href="#patrocinadores">Patrocinadores/afiliados</a>
+                </span>
+              </li>
+            </ul>
+  
+          </div>
+        </div>
+      </nav>
+
     <div class="header">
         <h1>Alimentando comunidades, Reduciendo Desperdicio</h1>
     </div>
-
+    <br>
     <h1 style="text-align: center; color: rgb(53, 50, 50)"> <strong>¿Quiénes somos? </strong></h1>
     <p style="text-align: center;">
         En Alimentos S.A, nuestro equipo cree firmemente en el poder de la comunidad para marcar una
@@ -83,17 +73,18 @@
 
     </p>
     <h1 style="text-align: center;color:rgb(53, 50, 50)"><strong>¿Cómo operamos?</strong></h1>
-    <p>
+    
+    <p >
         Nuestro modo de operación es sencillo:
     </p>
-    <div class="accordion" id="accordionExample">
+    <div class="accordion" id="accordionExample" class="row mb-3">
         <div class="accordion-item">
-          <h2 class="accordion-header">
+          <h2 class="accordion-header" class="row mb-3">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                 Registro de Restaurantes Participantes</button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
+            <div class="accordion-body" class="row mb-3">
                 Registra tu restaurante en nuestra plataforma y únete a la lucha contra el desperdicio de alimentos. Es fácil y rápido.
             </div>
           </div>
@@ -139,7 +130,7 @@
                 <div class="card card-1">
                     <div class="card-body">
                         <h5 class="card-title">Registra tu restaurante</h5>
-                        <a href="patrocinadores.html" class="btn btn-primary">Ir</a>
+                        <a href="patrocinadores.php" class="btn btn-primary">Ir</a>
                     </div>
                 </div>
             </div>
@@ -164,9 +155,7 @@
 
     <footer></footer>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
+    </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </html>
