--- a/Views/terminoPatrocinador.html
+++ b/Views/terminoPatrocinador.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./Assets/css/Registros.css">
+    
     <title>Document</title>
 </head>
 <body style="background-color: #f3e0bc;">
@@ -101,9 +101,7 @@
             </label>
         </div>
         <br>
-        <?php
-        <a class="btn btn-primary disabled" id="registerButton" href="/patrocinadores">Registrarse</a>
-        ?>
+        <a class="btn btn-primary disabled" id="registerButton" href="#Res_Patrocinador.php">Registrarse</a>
         <br>
         <br>
     </div>
@@ -117,7 +115,6 @@
     </footer>
 
 </body>
-<script src="./Assts/js/Terminos.js"></script>
+<script src="./Assets/js/Terminos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
-.
