--- a/Views/Assets/css/plantilla.css
+++ b/Views/Assets/css/plantilla.css
@@ -1,19 +1,14 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f8f9fa;
-    color: #343a40;
-}
 
 header {
     margin-bottom: 20px;
 }
 
 .navbar {
-    background-color: #007bff;
+    background-color: #198d84;
 }
 
 .navbar-brand, .nav-link {
-    color: #198d19 !important;
+    color: #000000 ;
 }
 
 .nav-link.active {
@@ -21,7 +16,7 @@ header {
 }
 
 .nav-link:hover {
-    color: #ffc107 !important;
+    color: #ffffff ;
 }
 
 .nav-button a {
@@ -38,26 +33,31 @@ header {
 
 .form-label {
     margin-top: 10px;
+    font-size: 14px;
 }
 
 .form-control {
     margin-bottom: 10px;
+    padding: 8px;
+    font-size: 14px;
 }
 
 button[type="submit"] {
     margin-top: 20px;
-    background-color: #007bff;
+    background-color: #198d84;
     border: none;
+    padding: 10px 20px;
+    font-size: 14px;
 }
 
 button[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #115a4f;
 }
 
 footer {
     margin-top: 40px;
     padding: 20px;
-    background-color: #343a40;
+    background-color: #198d84;
     color: #fff;
     text-align: center;
 }
@@ -68,4 +68,17 @@ footer h3 {
 
 footer p {
     margin: 0;
+}
+
+.form-container {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    max-width: 600px;
+    margin: 30px auto;
+}
+
+.form-group {
+    margin-bottom: 15px;
 }
