--- a/Views/ofertas.html
+++ b/Views/ofertas.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="./index">Logo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
               aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
       </header>
 
       <section>
-        <div class="producto">
+        <div class="container">
             <div class="imgProducto">
                 <img src="https://3.bp.blogspot.com/-rgFXEBlI5Dw/XCWcmq8arfI/AAAAAAAAH_w/7xWK7h2G30YS-OTaBADj1zCl2BFf8TRnACLcBGAs/s1600/bibimbap.jpg"   alt="Bibimbap">
             </div>
@@ -61,9 +61,8 @@
             </div>
         </div>
     </section>
-
     <section>
-        <div class="producto">
+        <div class="container">
             <div class="imgProducto">
                 <img src="https://3.bp.blogspot.com/-rgFXEBlI5Dw/XCWcmq8arfI/AAAAAAAAH_w/7xWK7h2G30YS-OTaBADj1zCl2BFf8TRnACLcBGAs/s1600/bibimbap.jpg"   alt="Bibimbap">
             </div>
