lo ultimo para exponer

--- a/Views/Assets/css/estilos.css
+++ b/Views/Assets/css/estilos.css
@@ -1,120 +1,172 @@
-.header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 20px 50px;
-  background-color: #36a079;
-  color: #9e6161;
-  width: 100%;
-  box-sizing: border-box;
+header {
+  margin-bottom: 20px;
 }
+
+
 .navbar {
-  width: 100%;
-  background-color: blue;
+  background-color: #198d84;
 }
-body {
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-  justify-content: space-between;
-  padding-left: 12px;
-  padding-right: 12px;
+
+.navbar-brand, .nav-link {
+  color: #000000 ;
 }
-.content {
-  margin-top: 20px;
+
+.nav-link.active {
+  font-weight: bold;
 }
-.patrocinadores {
-  color: black;
+
+.nav-link:hover {
+  color: #ffffff ;
 }
-.nav-button {
-  float: right; 
-  color: rgb(198, 230, 84); 
-  padding: 4px 20px;
-  overflow: hidden;
+
+.nav-button a {
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+  background-color: #28a745;
   border-radius: 5px;
   justify-content: right;
 }
-.nav-link {
-  float: right; 
-  color: rgb(0, 0, 0); 
-  padding: 4px 20px;
-  overflow: hidden;
-  border-radius: 5px;
+
+.nav-button a:hover {
+  background-color: #218838;
 }
-.nav-item:hover {
-  background-color: #a47fb9;
-}
-.formulario {
-  width: 300px;
-  margin: auto;
-}
-#toggleButton {
-  cursor: pointer;
-}
-#loginOptions {
-  display: none;
-}
-.container {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-}
-.formulario {
-  flex: 2;
-}
-aside {
-  flex: 1;
-  margin-left: 20px;
-}
-.producto {
-  background-color: #f1cb1d;
-  border: 5px outset;
-  border-radius: 25px;
-  padding: 4px;
-  margin: 33px;
-  text-align: center;
-  width: 160px;
-  transition: transform 0.5s;
-}
-.producto:hover {
-  transform: scale(1.06);
-}
-.imgProducto img {
-  height: 150px;
-  width: 150px;
-  object-fit: cover;
-  border-radius: 10px 10px 0 0;
-}
-.nombreProducto {
-  font-size: 23px;
-  margin-bottom: 10px;
-  font-weight: bold;
-  display: flex;
-}
-.cantidad {
-  margin-bottom: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.cantidad label {
-  flex-grow: 1;
-  text-align: left;
-  margin-right: 15px;
-}
-.cantidad input {
-  width: 60px;
-  padding: 5px;
-  text-align: center;
-  border: 1px solid #ffffff;
-  border-radius: 5px;
-}
-.boton {
-  background-color: #28a745;
-  color: #ffffff;
-  padding: 8px 8px;
-  margin-right: 15px;
-  margin-left: 200;
+
+.form-label {
+  margin-top: 10px;
   font-size: 14px;
-  border-radius: 18px;
 }
+
+.form-control {
+  margin-bottom: 10px;
+  padding: 8px;
+  font-size: 14px;
+}
+
+button[type="submit"] {
+  margin-top: 20px;
+  background-color: #198d84;
+  border: none;
+  padding: 10px 20px;
+  font-size: 14px;
+}
+
+button[type="submit"]:hover {
+  background-color: #115a4f;
+  margin-top: 20px;
+  border: none;
+  padding: 10px 20px;
+  font-size: 14px;
+}
+
+footer {
+  margin-top: 40px;
+  padding: 20px;
+  background-color: #198d84;
+  color: #fff;
+  text-align: center;
+}
+h1 {
+  text-align: center;
+  color: #000000;
+  margin-bottom: 20px;
+}
+h2 {
+  text-align: center;
+  color: #000000;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+ul, ol {
+  margin-bottom: 20px;
+  padding-left: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+li {
+  margin-bottom: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+p{
+  margin-left: 25px;
+  margin-right: 25px;
+}
+
+h3 {
+  text-align: center;
+  color: #333;
+  margin-top: 30px;
+}
+
+.jumbotron h2 {
+  margin-top: 0;
+}
+
+.jumbotron p {
+  margin-bottom: 10px;
+}
+p {
+  margin-bottom: 20px;
+  line-height: 1.6;
+}
+.jumbotron {
+  padding: 20px;
+  background-color: hsl(0, 0%, 94%);
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+
+footer h3 {
+  margin-bottom: 10px;
+}
+
+footer p {
+  margin: 0;
+}
+
+.form-container {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+.card {
+  background-image: url('https://tbm-media.s3.amazonaws.com/og_images/IMG_6209_crop_1200.jpg');
+  background-size: cover;
+  background-position: center;
+  color: white;
+  text-align: center;
+  height: 300px;
+}
+
+.card-body {
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+
+.card-1 {
+  background-image: url('https://tbm-media.s3.amazonaws.com/og_images/IMG_6209_crop_1200.jpg');
+}
+
+.card-2 {
+  background-image: url('https://www.gannett-cdn.com/-mm-/148256208c5eca0e0fa2a8da2eaceef67d721a11/c=0-165-2993-1856/local/-/media/2018/01/17/Pensacola/Pensacola/636518005126914564-Helping-the-Homeless-001.jpg?width=3200&height=1680&fit=crop');
+}
+
+.card-3 {
+  background-image: url('https://media.npr.org/assets/img/2012/07/05/homeless-in-philadelphia-e35ede4faf4c36354378c34d4d696cecc25fbbfa-s1100-c50.jpg');
+}
+
