--- a/Views/Assets/css/estilosOfertas.css
+++ b/Views/Assets/css/estilosOfertas.css
@@ -1,89 +1,99 @@
-header {
-    margin-bottom: 20px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.navbar {
-    background-color: #198d84;
-}
-
-.navbar-brand, .nav-link {
-    color: #000000;
-}
-
-.nav-link.active {
-    font-weight: bold;
-}
-
-.nav-link:hover {
-    color: #1d708f;
-}
-
-
-.nav-button a {
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 20px;
-    background-color: #28a745;
-    border-radius: 5px;
-}
-
-.nav-button a:hover {
-    background-color: #218838;
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
 }
 
 main {
+    flex: 1; 
     display: flex;
-    gap: 20px; 
+    flex-direction: row-reverse;
     justify-content: center;
-    padding: 20px; 
-    max-width: auto; 
-
-}
-
-
-.producto {
-    display: flex;
-    flex-direction: column; 
     align-items: center;
-    text-align: center; 
-    border: 1px solid #ddd;
     padding: 20px;
-    max-width: 200px;
-    width: 50px; 
-    box-sizing: border-box;
 }
 h1{
     text-align: center;
+    margin-top: 3%;
+}
+
+section {
+    display: flex;
+    flex-direction: row; 
+    flex-wrap: wrap; 
+    justify-content: space-around;
+    width: 100%;
+    max-width: 800px;
+    margin-bottom: 20px; 
+}
+.producto {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    width: 200px; 
+    padding: 10px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    transition: transform 0.3s;
+    margin: 10px;
+}
+
+.producto:hover {
+    transform: scale(1.05); 
 }
 
 .imgProducto {
+    width: 100%;
+    height: 100%;
+    overflow: hidden; 
+    border-radius: 5px;
     margin-bottom: 10px;
-    width: 12px;
-    height: 50px;
 }
-img{
-    height: 120px;
-    width: 120px;
 
+.imgProducto img {
+    width: 100%; 
+    height: auto;
+    display: block; 
 }
 
 .nombreProducto {
     font-weight: bold;
-    margin-bottom: 5px;
-    margin-top: 70px;
+    margin-bottom: 10px;
+    text-align: center;
 }
 
-
 .cantidad {
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 .boton {
-    background-color: #4CAF50; 
-    padding: 8px 16px; 
-    border: none; 
-    cursor: pointer; 
-    
+    background-color: #61fb82;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.boton:hover {
+    background-color: #4a9dbb;
+}
+
+footer {
+    padding: 20px;
+    background-color: #198d84;
+    color: #fff;
+    text-align: center;
 }
 
 footer h3 {
@@ -92,11 +102,4 @@ footer h3 {
 
 footer p {
     margin: 0;
-}
-footer {
-    margin-top: 40px;
-    padding: 20px;
-    background-color: #198d84;
-    color: #fff;
-    text-align: center;
 }
