--- a/Views/sobreNosotros.html
+++ b/Views/sobreNosotros.html
@@ -154,7 +154,14 @@
         </div>
     </div>
 
-    <footer></footer>
+    <footer classs="footer">
+      <h3>Contactenos</h3>
+      <span class="material-symbols-outlined">
+          call support_agent
+      </span>
+      <hr>
+      <p>tel:8888-8888 correo: EcoEatsCorp@gmail.com</p>
+  </footer>
     
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
