--- a/Views/TerminoVoluntario.html
+++ b/Views/TerminoVoluntario.html
@@ -103,7 +103,7 @@ colaborar con los voluntarios y mostrar respeto por su trabajo y esfuerzo.
       </label>
     </div>
     <br>
-    <button type="button" id="registerButton" onclick="window.location.href='./voluntarios.php'" class="btn btn-warning" method="post" disabled>
+    <button type="button" id="registerButton" onclick="window.location.href='./index.html'" class="btn btn-warning" method="post" disabled>
       Registrarse
     </button>
     <br>
@@ -118,6 +118,6 @@ colaborar con los voluntarios y mostrar respeto por su trabajo y esfuerzo.
         <p>tel:8888-8888 correo: marcobruno@gmail.com</p>
     </footer>
 </body>
-<script src="./Assets/js/Terminos.js"></script>
+<script src="./Assets/js/FromTerminos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
