--- a/Views/index.html
+++ b/Views/index.html
@@ -28,7 +28,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Voluntarios</a>
+              <a class="nav-link" href="./FromVolutario.html">Voluntarios</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Comercios afiliados</a>
