--- a/Views/FromResgistro.html
+++ b/Views/FromResgistro.html
@@ -47,16 +47,12 @@
         <form class="row g-3">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="inputNombre" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="inputNombre">
+                    <label for="nombre" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="nombre">
                 </div>
                 <div class="form-group">
-                    <label for="inputApellido" class="form-label">Apellido</label>
-                    <input type="text" class="form-control" id="inputApellido">
-                </div>
-                <div class="form-group">
-                    <label for="inputEmpresa" class="form-label">Empresa</label>
-                    <input type="text" class="form-control" id="inputEmpresa">
+                    <label for="email" class="form-label">correo</label>
+                    <input type="email" class="form-control" id="email">
                 </div>
             </div>
             <div class="col-md-6">
@@ -65,8 +61,8 @@
                     <input type="tel" class="form-control" id="inputTelefono" placeholder="Teléfono">
                 </div>
                 <div class="form-group">
-                    <label for="inputCorreo" class="form-label">Correo</label>
-                    <input type="email" class="form-control" id="inputCorreo">
+                    <label for="direccion" class="form-label">Direccion</label>
+                    <input type="text" class="form-control" id="direccion">
                 </div>
                 <div class="form-group">
                     <label for="inputContraseña" class="form-label">Contraseña</label>
