--- a/Views/FromVolutario.html
+++ b/Views/FromVolutario.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar"class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index">Logo</a>
                 <button class="navbar-toggler" type="button"
@@ -43,6 +43,7 @@
             </div>
         </nav>
     </header>
+
     <div class="form-container">
         <form class="row g-3">
             <div class="form-group col-md-6">
@@ -82,10 +83,79 @@
                 <input type="password" class="form-control" id="inputContraseña">
             </div>
             <div class="form-group full-width col-12">
-                <button type="submit" class="btn btn-primary">Registrar</button>
+                <button type="button" class="btn btn-primary" onclick="showTerms()">Registrar</button>
             </div>
         </form>
     </div>
+    
+
+    <div id="terms" class="terms-content">
+        <span class="close-btn" onclick="closeTerms()">&times;</span>
+        <h5>Gracias por visitar el Programa Voluntario de Asistencia Alimentaria. Usted reconoce y acepta los siguientes términos y condiciones al participar en este programa. Antes de continuar, lea atentamente este párrafo.</h5>
+        <br>
+        <h5>Definiciones</h5>
+        <h6>
+            Voluntarios: Personas que ofrecen gratuitamente su tiempo y experiencia para ayudar al funcionamiento de los programas.<br>
+            Beneficiarios: Personas u organizaciones que reciben ayuda y servicios de los voluntarios.<br>
+            Organización: La entidad responsable de supervisar y gestionar el programa.
+        </h6>
+        <br>
+        <h5>Elegibilidad</h5>
+        <h6>
+            Los voluntarios pueden ser cualquier persona que desee ayudar a la causa, pero antes deben contar con la aprobación de la organización.<br>
+            Beneficiarios: Personas u organizaciones que la organización ha determinado que necesitan ayuda y apoyo.
+        </h6>
+        <br>
+        <h5>Las obligaciones de los voluntarios</h5>
+        <h6>
+            Cumplir sus deberes y obligaciones con diligencia y dedicación.<br>
+            Respetar las políticas y procedimientos establecidos por la Organización.<br>
+            No utilizar el programa para ganar dinero u obtener ventajas personales no aprobadas.
+        </h6>
+        <br>
+        <h5>Responsabilidades de la Organización</h5>
+        <h6>
+            Asignar el trabajo voluntario de forma justa y equitativa.<br>
+            Proporcionar la formación y el apoyo necesarios para que los voluntarios puedan llevar a cabo sus tareas de manera eficiente.<br>
+            Llevar un registro detallado de las acciones y contribuciones de los voluntarios.
+        </h6>
+        <br>
+        <h5>Obligaciones de los Beneficiarios</h5>
+        <h6>
+            Con el fin de determinar su elegibilidad, los Beneficiarios deben proporcionar información precisa y actualizada sobre sus circunstancias y necesidades.<br>
+            Utilizar la ayuda y los recursos únicamente en beneficio propio o de la comunidad.<br>
+            Colaborar con los voluntarios y mostrar respeto por su trabajo y esfuerzo.
+        </h6>
+        <br>
+        <h5>Restricciones a la rendición de cuentas</h5>
+        <h6>
+            En caso de daños directos, indirectos, incidentales, especiales o consecuentes de utilizar los servicios proporcionados a través del Programa, no serán responsables la Organización ni los voluntarios.
+        </h6>
+        <br>
+        <h5>Modificaciones de las condiciones de venta</h5>
+        <h6>
+            Estas condiciones están sujetas a cambios en cualquier momento por parte de la Organización. Cualquier cambio será comunicado a los voluntarios y beneficiarios con la antelación necesaria.
+        </h6>
+        <br>
+        <h5>Finalización del Programa</h5>
+        <h6>
+            El Programa podrá ser finalizado por la Organización en cualquier momento y por cualquier causa. Los voluntarios y beneficiarios serán informados tan pronto como sea posible en caso de terminación.
+        </h6>
+        <br>
+        <div class="col-12 d-flex justify-content-center flex-column align-items-center">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="acceptTerms">
+                <label class="form-check-label" for="acceptTerms">
+                    Acepta los términos y Condiciones
+                </label>
+            </div>
+            <br>
+            <button type="button" id="registerButton" class="btn btn-warning" disabled onclick="register()">
+                Registrarse
+            </button>
+        </div>
+    </div>
+
     <footer classs="footer">
         <h3>Contactenos</h3>
         <span class="material-symbols-outlined">
@@ -94,7 +164,9 @@
         <hr>
         <p>tel:8888-8888 correo: EcoEatsCorp@gmail.com</p>
     </footer>
-    <script>js.js</script>
+
+    <script src="./Assets/js/CVoluntario.js"></script>
+    <script src="./Assets/js/FromTerminos.js"></script>
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
