--- a/Views/TerminoPatrocinador.html
+++ b/Views/TerminoPatrocinador.html
@@ -100,7 +100,7 @@
       </label>
     </div>
     <br>
-    <button type="button" id="registerButton" onclick="window.location.href='./Res_Patrocinador.php'" class="btn btn-warning" method="post" disabled>
+    <button type="submit" id="registerButton" onclick="window.location.href='./index.html'" class="btn btn-warning" method="post" disabled>
       Registrarse
     </button>
     <br>
@@ -115,6 +115,6 @@
         <p>tel:8888-8888 correo: EcoEatsCorp@gmail.com</p>
     </footer>
 </body>
-<script src="./Assets/js/Terminos.js"></script>
+<script src="./Assets/js/FromTerminos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
