Se agrego el código de controlador y model para patrocinador y voluntario

--- a/Views/FromVolutario.html
+++ b/Views/FromVolutario.html
@@ -47,40 +47,40 @@
     <div class="form-container">
         <form class="row g-3">
             <div class="form-group col-md-6">
-                <label for="inputNombre" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="inputNombre">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="nombre">
             </div>
             <div class="form-group col-md-6">
-                <label for="inputApellido" class="form-label">Apellido</label>
-                <input type="text" class="form-control" id="inputApellido">
+                <label for="apellido" class="form-label">Apellido</label>
+                <input type="text" class="form-control" id="apellido">
             </div>
             <div class="form-group col-md-6">
-                <label for="inputCorreo" class="form-label">Correo</label>
-                <input type="email" class="form-control" id="inputCorreo">
+                <label for="email" class="form-label">Correo</label>
+                <input type="email" class="form-control" id="email">
             </div>
             <div class="form-group col-md-6">
-                <label for="inputTelefono" class="form-label">Teléfono</label>
-                <input type="tel" class="form-control" id="inputTelefono" placeholder="Teléfono">
+                <label for="telefono" class="form-label">Teléfono</label>
+                <input type="text" class="form-control" id="telefono" placeholder="Teléfono">
             </div>
             <div class="form-group col-md-6">
-                <label for="inputState" class="form-label">Tipo de transporte</label>
-                <select id="inputState" class="form-select">
+                <label for="transporte" class="form-label">Tipo de transporte</label>
+                <select id="transporte" class="form-select">
                     <option selected>Carro</option>
                     <option>Moto</option>
                     <option>Camión</option>
                 </select>
             </div>
             <div class="form-group col-md-6">
-                <label for="inputIndentificador" class="form-label">Identificador</label>
-                <input type="text" class="form-control" id="inputIndentificador">
+                <label for="indentificador" class="form-label">Identificacion</label>
+                <input type="text" class="form-control" id="indentificador">
             </div>
             <div class="form-group col-md-6">
-                <label for="inputCanton" class="form-label">Cantón</label>
-                <input type="text" class="form-control" id="inputCanton">
+                <label for="canton" class="form-label">Cantón</label>
+                <input type="text" class="form-control" id="canton">
             </div>
             <div class="form-group col-md-6">
-                <label for="inputContraseña" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="inputContraseña">
+                <label for="contraseña" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="contraseña">
             </div>
             <div class="form-group full-width col-12">
                 <button type="button" class="btn btn-primary" onclick="showTerms()">Registrar</button>
