--- a/Views/FromPatrocinador.html
+++ b/Views/FromPatrocinador.html
@@ -44,34 +44,34 @@
                 <form class="row g-3">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label for="inputNombre" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="inputNombre">
+                            <label for="nombre" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="nombre">
                         </div>
                         <div class="form-group">
-                            <label for="inputApellido" class="form-label">Apellido</label>
-                            <input type="text" class="form-control" id="inputApellido">
+                            <label for="apellido" class="form-label">Apellido</label>
+                            <input type="text" class="form-control" id="apellido">
                         </div>
                         <div class="form-group">
-                            <label for="inputEmpresa" class="form-label">Empresa</label>
-                            <input type="text" class="form-control" id="inputEmpresa">
+                            <label for="empresa" class="form-label">Empresa</label>
+                            <input type="text" class="form-control" id="empresa">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label for="inputTelefono" class="form-label">Teléfono</label>
-                            <input type="tel" class="form-control" id="inputTelefono" placeholder="Teléfono">
+                            <label for="telefono" class="form-label">Teléfono</label>
+                            <input type="tel" class="form-control" id="telefono" placeholder="Teléfono">
                         </div>
                         <div class="form-group">
-                            <label for="inputCorreo" class="form-label">Correo</label>
-                            <input type="email" class="form-control" id="inputCorreo">
+                            <label for="email" class="form-label">Correo</label>
+                            <input type="email" class="form-control" id="email">
                         </div>
                         <div class="form-group">
-                            <label for="inputContraseña" class="form-label">Contraseña</label>
-                            <input type="password" class="form-control" id="inputContraseña">
+                            <label for="contraseña" class="form-label">Contraseña</label>
+                            <input type="password" class="form-control" id="contraseña">
                         </div>
                         <div class="form-group">
-                            <label for="inputConfiContraseña" class="form-label">Confirmar Contraseña</label>
-                            <input type="password" class="form-control" id="inputConfiContraseña">
+                            <label for="ConfiContraseña" class="form-label">Confirmar Contraseña</label>
+                            <input type="password" class="form-control" id="ConfiContraseña">
                         </div>
                     </div>
                     <div class="col-12">
