--- a/Views/Assets/css/terminos.css
+++ b/Views/Assets/css/terminos.css
@@ -39,9 +39,13 @@ header {
     background-color: #218838;
 }
 
+
+
+
+
 .form-label {
     margin-top: 10px;
-    font-size: 14px;
+    font-size: 50rem;
 }
 
 .form-control {
