--- a/Views/index.html
+++ b/Views/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <nav classs="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav  class="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index">EcoEats</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -62,7 +62,7 @@
             <div class="card card-2">
                 <div class="card-body">
                     <h5 class="card-title">Registrate como voluntario</h5>
-                    <a href="patrocinadores.html" class="btn btn-primary">Ir</a>
+                    <a href="FromVolutario.html" class="btn btn-primary">Ir</a>
                 </div>
             </div>
         </div>
@@ -128,14 +128,14 @@
   </div>
   <!-- Jumbotron -->
 
-  <footer>
+  <footer class="footer">
     <h3>Contactenos</h3>
     <span class="material-symbols-outlined">
-      call support_agent
+        call support_agent
     </span>
     <hr>
     <p>tel:8888-8888 correo: EcoEatsCorp@gmail.com</p>
-  </footer>
+</footer>
 </body>
 
 </html>  
