--- a/Views/Assets/css/Registros.css
+++ b/Views/Assets/css/Registros.css
@@ -141,3 +141,12 @@ footer p {
 .form-group {
     margin-bottom: 15px;
 }
+
+.formulario {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    max-width: 600px;
+    margin: 30px auto;
+}
