--- a/Views/Assets/css/login.css
+++ b/Views/Assets/css/login.css
@@ -50,14 +50,21 @@ h1 {
 }
 
 .form-label {
+    font-weight: bold;
     margin-top: 10px;
     font-size: 14px;
+}
+
+.form-select{
+    font-weight: bold;
+    font-size: 16px;
 }
 
 .form-control {
     margin-bottom: 10px;
     padding: 8px;
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 button[type="submit"] {
