--- a/Views/FromPatrocinador.html
+++ b/Views/FromPatrocinador.html
@@ -40,6 +40,7 @@
 
     <div class="form-container">
         <div class="row">
+            <h1 class="text-center">Patrocinador</h1>
             <div class="col-md-12">
                 <form class="row g-3">
                     <div class="col-md-6">
