--- a/Views/FromResgistro.html
+++ b/Views/FromResgistro.html
@@ -45,6 +45,7 @@
 
     <div class="form-container">
         <form class="row g-3">
+            <h1 class="text-center">Registro</h1>
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="nombre" class="form-label">Nombre</label>
