--- a/Views/FromVolutario.html
+++ b/Views/FromVolutario.html
@@ -46,6 +46,7 @@
 
     <div class="form-container">
         <form class="row g-3">
+            <h1 class="text-center">Voluntario</h1>
             <div class="form-group col-md-6">
                 <label for="nombre" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="nombre">
