--- a/Views/index.html
+++ b/Views/index.html
@@ -8,43 +8,43 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="./Assets/css/estilos.css" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <nav  class="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar"class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index">EcoEats</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./FromVolutario.html">Voluntarios</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Comercios afiliados</a>
-            </li>
-            <li class="nav-item">
-              <span>
-                <a class="nav-button" href="#patrocinadores">Patrocinadores/afiliados</a>
-              </span>
-            </li>
-          </ul>
-
-        </div>
+          <a class="navbar-brand" href="./index.html">Logo</a>
+          <button class="navbar-toggler" type="button"
+              data-bs-toggle="collapse" data-bs-target="#navbarText"
+              aria-controls="navbarText" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="./FromVolutario.html">Voluntarios</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">Comercios afiliados</a>
+                  </li>
+                  <li class="nav-item">
+                      <span>
+                          <a class="nav-button" href="./FromPatrocinador.html">Patrocinadores/afiliados</a>
+                      </span>
+                  </li>
+              </ul>
+          </div>
       </div>
-    </nav>
-
-  </header>
+  </nav>
+</header>
 
   <h1>EcoEats</h1>
   
@@ -110,23 +110,7 @@
     <p>Tu tiempo y esfuerzo pueden tener un impacto significativo. Únete a <strong>EcoEats</strong> como voluntario y ayúdanos a construir un futuro más sostenible para todos. ¡Esperamos contar contigo!</p>
 </section>
    </div>
-   <!-- Jumbotron -->
-  <div class="p-4 shadow-4 rounded-3" style="background-color: hsl(0, 0%, 94%);">
-    <h2>EcoEats</h2>
-    
-
-    <hr/>
-
-    <p>
-      <h3>Ofertas alimenticias RELAMPAGO <span class="material-symbols-outlined">
-        bolt
-        </span></h3>
-    </p>
-    <button type="button" onclick="window.location.href='./ofertas.html'" data-mdb-ripple-init class="btn btn-warning" justify-content: center>
-      Ofertas
-    </button>
-  </div>
-  <!-- Jumbotron -->
+  
 
   <footer class="footer">
     <h3>Contactenos</h3>
@@ -137,6 +121,6 @@
     <p>tel:8888-8888 correo: EcoEatsCorp@gmail.com</p>
 </footer>
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>  
     
