--- a/Views/Assets/css/estilos.css
+++ b/Views/Assets/css/estilos.css
@@ -18,7 +18,7 @@ header {
 
 .navbar-brand, .nav-link {
   color: #000000;
-  font-size: 18px; /* Tamaño de fuente reducido */
+  font-size: 18px; 
 }
 
 .nav-link.active {
@@ -36,7 +36,7 @@ header {
   background-color: #28a745;
   border-radius: 5px;
   justify-content: right;
-  font-size: 18px; /* Tamaño de fuente reducido */
+  font-size: 18px; 
 }
 
 .nav-button a:hover {
@@ -45,13 +45,13 @@ header {
 
 .form-label {
   margin-top: 15px;
-  font-size: 16px; /* Tamaño de fuente reducido */
+  font-size: 16px; 
 }
 
 .form-control {
   margin-bottom: 15px;
   padding: 8px;
-  font-size: 16px; /* Tamaño de fuente reducido */
+  font-size: 16px; 
 }
 
 button[type="submit"] {
@@ -59,7 +59,7 @@ button[type="submit"] {
   background-color: #198d84;
   border: none;
   padding: 8px 16px;
-  font-size: 18px; /* Tamaño de fuente reducido */
+  font-size: 18px; 
 }
 
 button[type="submit"]:hover {
@@ -67,29 +67,29 @@ button[type="submit"]:hover {
   margin-top: 20px;
   border: none;
   padding: 8px 16px;
-  font-size: 18px; /* Tamaño de fuente reducido */
+  font-size: 18px; 
 }
 
 h1 {
   text-align: center;
-  color: #000000; /* Texto negro */
+  color: #000000; 
   margin-bottom: 20px;
-  font-size: 36px; /* Tamaño de fuente reducido */
+  font-size: 36px; 
 }
 
 h2 {
   text-align: center;
-  color: #000000; /* Texto negro */
+  color: #000000; 
   margin-bottom: 20px;
   margin-top: 20px;
-  font-size: 30px; /* Tamaño de fuente reducido */
+  font-size: 30px; 
 }
 
 h3 {
   text-align: center;
-  color: #000000; /* Texto negro */
+  color: #000000; 
   margin-top: 20px;
-  font-size: 24px; /* Tamaño de fuente reducido */
+  font-size: 24px; 
 }
 
 ul, ol {
@@ -105,24 +105,24 @@ li {
   margin-bottom: 10px;
   margin-left: 20px;
   margin-right: 20px;
-  font-size: 18px; /* Tamaño de fuente reducido */
+  font-size: 18px; 
 }
 
 p {
   margin-left: 20px;
   margin-right: 20px;
-  font-size: 18px; /* Tamaño de fuente reducido */
+  font-size: 18px; 
   line-height: 1.6;
 }
 
 .jumbotron h2 {
   margin-top: 0;
-  font-size: 30px; /* Tamaño de fuente reducido */
+  font-size: 30px; 
 }
 
 .jumbotron p {
   margin-bottom: 15px;
-  font-size: 24px; /* Tamaño de fuente reducido */
+  font-size: 24px; 
 }
 
 .jumbotron {
@@ -134,23 +134,23 @@ p {
 }
 
 .footer {
-  background: linear-gradient(to bottom right, rgba(214, 76, 207, 0.8), rgba(28, 7, 43, 0.8)); /* Gradiente que se mantiene */
+  background: linear-gradient(to bottom right, rgba(214, 76, 207, 0.8), rgba(28, 7, 43, 0.8)); 
   color: white;
   padding: 20px 10px; 
   position: relative;
   overflow: hidden;
   border-top: none; 
-  box-shadow: none; /* Elimina la sombra del borde exterior */
+  box-shadow: none; 
 }
 
 footer h3 {
   margin-bottom: 10px;
-  font-size: 24px; /* Tamaño de fuente reducido */
+  font-size: 24px; 
 }
 
 footer p {
   margin: 0;
-  font-size: 18px; /* Tamaño de fuente reducido */
+  font-size: 18px; 
 }
 
 .form-container {
@@ -181,7 +181,7 @@ footer p {
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  font-size: 18px; /* Tamaño de fuente reducido */
+  font-size: 18px; 
 }
 
 .content-wrapper {
